--- a/Templates/Menu.html
+++ b/Templates/Menu.html
@@ -33,7 +33,7 @@
       .Botones button {
         width: 100%;
         padding: 10px;
-        background: #007bff;
+        background: #000000;
         color: #fff;
         border: none;
         border-radius: 4px;
