--- a/Templates/registrar.html
+++ b/Templates/registrar.html
@@ -8,32 +8,40 @@
         <h1>Seccion para agregar nuevos "Usuarios"</h1>
       </div>
       <div>
-        <label>Nombre</label>
-        <input type="text" id="Nombre" name="Nombre" />
+        {% if message %}
+        <div class="{{tipo}}">{{ message }}</div>
+        {% endif %}
+        <form action="{{ url_for('usuario_bp.insertar_en_db') }}" method="POST">
+          <label>Nombre</label>
+          <input type="text" id="Nombre" name="Nombre" />
 
-        <p></p>
+          <p></p>
 
-        <label>Apellidos</label>
-        <input type="text" id="Apellidos" name="Apellidos" />
+          <label>Apellidos</label>
+          <input type="text" id="Apellidos" name="Apellidos" />
 
-        <p></p>
+          <p></p>
 
-        <label>Nickname</label>
-        <input type="text" id="Nickname" name="Nickname" />
+          <label>Usuario</label>
+          <input type="text" id="Usuario" name="Usuario" />
 
-        <p></p>
+          <p></p>
 
-        <label>Contrasena</label>
-        <input type="password" id="Contrasena" name="Contrasena" />
+          <label>Contrasena</label>
+          <input type="password" id="Contrasena" name="Contrasena" />
 
-        <p></p>
+          <p></p>
 
-        <label>Rol</label>
-        <input type="text" id="Rol" name="Rol" />
+          <label>Rol</label>
+          <input type="text" id="Rol" name="Rol" />
 
-        <p></p>
+          <p></p>
 
-        <input type="submit" value="Subir" />
+          <input type="submit" value="Subir" />
+        </form>
+        <form action="{{ url_for('auth_bp.menu') }}" method="get">
+          <input type="submit" value="continuar" />
+        </form>
       </div>
     </body>
   </head>
