--- a/Templates/registrar.html
+++ b/Templates/registrar.html
@@ -52,7 +52,17 @@
         border-radius: 4px;
         font-size: 16px;
         cursor: pointer;
+        margin-top: 29px;
       }
+      .error-message {
+      background: #ffdddd;
+      color: #b30000;
+      border: 1px solid #b30000;
+      border-radius: 4px;
+      padding: 8px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
     </style>
   </head>
   <body>
@@ -62,8 +72,8 @@
     <div class="Fondo">
       <form action="{{ url_for('usuario_bp.insertar_en_db') }}" method="POST">
         <div class="Formulario">
-          {% if message %}
-          <div class="{{ tipo }}">{{ message }}</div>
+          {% if error %}
+          <div class="error-message">{{ error }}</div>
           {% endif %}
           <label for="Nombre">Nombre</label>
           <input type="text" id="Nombre" name="Nombre" required />
