--- a/Templates/registrar.html
+++ b/Templates/registrar.html
@@ -81,11 +81,8 @@
     <div class="Fondo">
       <form action="{{ url_for('usuario_bp.insertar_en_db') }}" method="POST">
         <div class="Formulario">
-          {% if error %}
-          <div class="error-mensaje">{{ error no se pudo registrar el usuario }}</div>
-          {% endif %}
-          {% if success %}
-          <div class="success-mensaje">{{ El usuario ha sido registrado exitosamente }}</div>
+          {% if message %}
+          <div class="{{ tipo }}">{{ message }}</div>
           {% endif %}
           <label for="Nombre">Nombre</label>
           <input type="text" id="Nombre" name="Nombre" required />
@@ -93,8 +90,8 @@
           <label>Apellidos</label>
           <input type="text" id="Apellidos" name="Apellidos" />
 
-          <label for="nickname">Nickname</label>
-          <input type="text" id="nickname" name="nickname" required />
+          <label for="Usuario">Usuario</label>
+          <input type="text" id="Usuario" name="Usuario" required />
 
           <label for="Contrasena">Contraseña</label>
           <input type="password" id="Contrasena" name="Contrasena" required />
