--- a/Templates/entrega.html
+++ b/Templates/entrega.html
@@ -63,11 +63,17 @@
     <div class="Fondo">
       <form action="{{ url_for('aparato_bp.entrega') }}" method="post" autocomplete="off">
         <div class="Formulario">
-          <label for="Costo">Costo Total del Trabajo</label>
-          <input type="number" id="Costo" name="Costo" required />
+            {% if message %}
+             <div class="{{ tipo }}">{{ message }}</div>
+            {% endif %}
+            <label for "Tel">Telefono del Cliente</label>
+            <input type="number" id="tel" name="tel" required />
 
-          <label for="Fecha">Fecha de Entrega del Trabajo</label>
-          <input type="date" id="Fecha" name="Fecha" required />
+            <label for="Costo">Costo Total del Trabajo</label>
+            <input type="number" id="Costo" name="Costo" required />
+
+            <label for="Fecha">Fecha de Entrega del Trabajo</label>
+            <input type="date" id="Fecha" name="Fecha" required />
         </div>
         <button class="Boton" type="submit">Entregar</button>
       </form>
