--- a/Templates/entrega.html
+++ b/Templates/entrega.html
@@ -55,6 +55,19 @@
         cursor: pointer;
         margin:5px;
       }
+      .message {
+        margin-top: 15px;
+        padding: 10px;
+        border-radius: 4px;
+        font-weight: bold;
+      }
+      .success-mensaje {
+        background-color: #d4edda;
+        color: #155724;
+      }
+      .error-mensaje {
+        background-color: #f8d7da;
+        color: #721c24;}
     </style>
   </head>
   <body>
@@ -62,12 +75,12 @@
       <h1>Entrega de Dispositivos</h1>
     </div>
     <div class="Fondo">
-      <form action="{{ url_for('aparato_bp.entrega') }}" method="post" autocomplete="off">
+      <form action="{{ url_for('aparato_bp.insertar_enterga') }}" method="POST" autocomplete="off">
         <div class="Formulario">
             {% if message %}
              <div class="{{ tipo }}">{{ message }}</div>
             {% endif %}
-            <label for "Tel">Telefono del Cliente</label>
+            <label for "tel">Telefono del Cliente</label>
             <input type="number" id="tel" name="tel" required />
 
             <label for="Costo">Costo Total del Trabajo</label>
