--- a/Templates/estatus.html
+++ b/Templates/estatus.html
@@ -41,16 +41,63 @@
       tr:nth-child(even) {
         background: #f2f2f2;
       }
+      label {
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+      input[type="text"] {
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 15px;
+        margin-bottom: 15px;
+      }
+      .Boton {
+        width: 100%;
+        padding: 10px;
+        background: #000000;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+        margin: 5px;
+      }
+      message {
+        margin-top: 15px;
+        padding: 10px;
+        border-radius: 4px;
+        font-weight: bold;
+      }
+      .success-mensaje {
+        background-color: #d4edda;
+        color: #155724;
+      }
+      .error-mensaje {
+        background-color: #f8d7da;
+        color: #721c24;
+      }
     </style>
   </head>
   <body>
     <div class="Estatus">
       <h1>Tabla para verificar el estatus de un Dispositivo</h1>
       <div>
+        <form action="{{url_for('aparato_bp.buscar_estatus')}}" method="POST">
+          <div>
+            <label for="tel">Telefono del cliente</label>
+            <input type="text" id="tel" name="tel" />
+            <button class="Boton" type="submit">Buscar</button>
+          </div>
+        </form>
+        {% if message %}
+        <div class="message {{ tipo }}">{{ message }}</div>
+        {% endif %}
         <table>
           <thead>
             <tr>
               <th>Estatus</th>
+              <th>Cliente</th>
               <th>Usuario</th>
               <th>Problema</th>
               <th>Diagnóstico</th>
@@ -59,14 +106,18 @@
           <tbody>
             {% for item in estatus_list %}
             <tr>
-              <td>{{ item.Status }}</td>
-              <td>{{ item.Usuario }}</td>
+              <td>{{ item.Estatus }}</td>
+              <td>{{ item.Cliente }}</td>
+              <td>{{ item.Equipo }}</td>
               <td>{{ item.Problema }}</td>
-              <td>{{ item.Diagnostico }}</td>
+              <td>{{ item.Descripcion }}</td>
               {% endfor %}
             </tr>
           </tbody>
         </table>
+        <form action="{{ url_for('auth_bp.menu') }}" method="get">
+          <button class="Boton" type="submit">Continuar</button>
+        </form>
       </div>
     </div>
   </body>
